--- a/templates/authapp/home.html
+++ b/templates/authapp/home.html
@@ -43,7 +43,7 @@
     <div class="col-md-3 mb-1">
       <div class="quick-access-card">
         <h6>Totál de colaboradores</h6>
-        <p>próximamente</p>
+        <p>{{ total_colaboradores|default:"0" }}</p>
         <a href="#" class="btn btn-success btn-sm">Ir →</a>
       </div>
     </div>
