--- a/templates/layouts/sidebar.html
+++ b/templates/layouts/sidebar.html
@@ -72,9 +72,10 @@
                         <i class="fa-solid fa-chart-line"></i> <span class="align-middle">Evaluación de desempeño</span>
                     </a>
                 </li>
-
+                {% endif %}
+                {% if user.is_authenticated and user.id == 64 or user.is_superuser %}
                 <li class="sidebar-item ">
-                    <a class="sidebar-link" href="{% url 'objective_dashboard' %}">
+                    <a class="sidebar-link" href="{% url 'objective_view' %}">
                         <i class="fa-solid fa-bullseye"></i><span class="align-middle">Objetivos</span>
                     </a>
                 </li>
