nombre del usuario en objetivos

--- a/templates/objectives/user/objectives_dashboard_user.html
+++ b/templates/objectives/user/objectives_dashboard_user.html
@@ -41,7 +41,7 @@
       <div class="form-item mb-3">
         <i class="form-icon bi bi-person-circle"></i>
         <div class="form-name">
-          <div class="fw-semibold">Nombre del usuario</div>
+          <div class="fw-semibold">{{ user_name }}</div>
           <small>cantidad de objetivos</small>
         </div>
       </div>
@@ -81,7 +81,7 @@
       </div>
     </div>
   </div>
-  
+
   <!-- ===== MI EQUIPO ===== -->
   <div id="contenedor-equipo" style="display:none;">
     <div class="form-list" id="list-equipo">
