desactivé la pregunta de numero decimal

--- a/templates/surveys/admin/survey_new.html
+++ b/templates/surveys/admin/survey_new.html
@@ -292,7 +292,7 @@
             <div class="fw-semibold mb-2">Tipo de respuesta</div>
             <div class="list-group" id="qeTypeList">
               <button type="button" class="list-group-item list-group-item-action" data-type="text">Texto</button>
-              <button type="button" class="list-group-item list-group-item-action" data-type="decimal">Número decimal</button>
+              {% comment %} <button type="button" class="list-group-item list-group-item-action" data-type="decimal">Número decimal</button> {% endcomment %}
               <button type="button" class="list-group-item list-group-item-action" data-type="integer">Número entero</button>
               <button type="button" class="list-group-item list-group-item-action" data-type="single">Opciones (selección única)</button>
               <button type="button" class="list-group-item list-group-item-action" data-type="multiple">Opciones (selección múltiple)</button>
